--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -1,3 +1,14 @@
 body{
     text-align: center;
 }
+
+img{
+    height: 300;
+    width: 150;
+}
+
+.notice{
+    text-align: right;
+    font-size: 30px;
+
+}
