--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -1,3 +1,39 @@
 body{
     text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 8px 12px;
+    justify-content:  center;
+}
+
+.navbar__menu {
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+
+.navbar__menu li {
+    padding: 15px 60px;
+    background-color: black;
+    border: 1px solid white;
+    font-size: 1.7em;
+    font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar__menu {
+        flex-direction: column;
+        background-color: wheat;
+        width: 100%;
+    }
 }
