--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -30,13 +30,6 @@ a {
     font-weight: bold;
 }
 
-@media screen and (max-width: 768px) {
-    .navbar__menu {
-        flex-direction: column;
-        background-color: wheat;
-        width: 100%;
-    }
-}
 
 img{
     height: 300;
@@ -45,6 +38,41 @@ img{
 
 .notice{
     text-align: right;
-    font-size: 30px;
+    font-size: 30px;   
+}
 
+#welcome {
+    display: flex;
+    flex-direction: column;
+}
+
+#welcome > span {
+    font-size: 2em;
+}
+
+.video_content{ 
+    position: relative; 
+    overflow: hidden; 
+    height: 0; 
+    padding-bottom: 56.25%; 
+    padding-top: 30px; } 
+.video_content iframe{ 
+    position: absolute; 
+    top: 50%; 
+    left: 50%; 
+    width: 100%; 
+    height: 100%;
+    max-width: 768px;
+    max-height: 432px;
+    transform: translate(-50%, -50%);
+}
+
+
+    
+@media screen and (max-width: 768px) {
+    .navbar__menu {
+        flex-direction: column;
+        background-color: wheat;
+        width: 100%;
+    }
 }
