--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -31,12 +31,12 @@ a {
 }
 
 
-img{
+img {
     height: 300;
     width: 150;
 }
 
-.notice{
+.notice {
     text-align: right;
     font-size: 30px;   
 }
@@ -50,13 +50,15 @@ img{
     font-size: 2em;
 }
 
-.video_content{ 
+.video_content { 
     position: relative; 
     overflow: hidden; 
     height: 0; 
     padding-bottom: 56.25%; 
-    padding-top: 30px; } 
-.video_content iframe{ 
+    padding-top: 30px; 
+} 
+
+.video_content iframe { 
     position: absolute; 
     top: 50%; 
     left: 50%; 
@@ -66,6 +68,66 @@ img{
     max-height: 432px;
     transform: translate(-50%, -50%);
 }
+
+/* #lastSection {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    background-color: deepskyblue;
+    padding: 2em 3em;
+    list-style: none;
+
+}
+
+.links {
+    display: flex;
+    /* font-size: 1.5em; */
+    /* align-items: center;
+    text-align: center;
+}
+
+.links > li {
+    flex: 2 1 auto;
+    background-color: gray;
+    padding: 10px 20px;
+    padding-top: 20px;
+    margin: 1px 1px;
+    width: 10rem;
+    height: 30px;
+    text-align: center;
+} */
+
+#lastSection{ 
+    position:relative; 
+    padding:80px 0 0; 
+    background-color: deepskyblue;
+    list-style: none;
+    width: 100%;
+}
+.links { 
+    padding:72px 0 92px; 
+    padding-right: 15px;
+}
+.links:after { 
+    content:"";
+    display:block;
+    clear:both;
+    *zoom:1; 
+}
+.links li { 
+    float:left; 
+    width:19%;
+    font-size: 1.5em;
+    text-align: center;
+    padding-top: 20px;
+    height: 40px;
+    margin-left: 1%;
+    margin-bottom:7px;
+    background-color: gray;
+}
+.links li a { display:block; }
+.links li a img { width:100%; }
 
 
     
