--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -4,16 +4,16 @@ body{
     padding: 0;
 }
 
-a {
+a, a:hover, a:link, a:visited {
     text-decoration: none;
-    color: white;
+    color: #7b9acc
 }
 
 .navbar {
     display: flex;
     align-items: center;
     padding: 8px 12px;
-    justify-content:  center;
+    justify-content: center;
 }
 
 .navbar__menu {
@@ -23,13 +23,20 @@ a {
 }
 
 .navbar__menu li {
-    padding: 15px 60px;
-    background-color: black;
+    padding: 20px 70px;
+    background-color: #FCF6F5;
     border: 1px solid white;
     font-size: 1.7em;
     font-weight: bold;
 }
 
+.navbar__togglebutton {
+    position: absolute;
+    right: 32px;
+    top: 175px;
+    font-size: 30px;
+    display: none;
+}
 
 img {
     height: 300;
@@ -69,39 +76,10 @@ img {
     transform: translate(-50%, -50%);
 }
 
-/* #lastSection {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    background-color: deepskyblue;
-    padding: 2em 3em;
-    list-style: none;
-
-}
-
-.links {
-    display: flex;
-    /* font-size: 1.5em; */
-    /* align-items: center;
-    text-align: center;
-}
-
-.links > li {
-    flex: 2 1 auto;
-    background-color: gray;
-    padding: 10px 20px;
-    padding-top: 20px;
-    margin: 1px 1px;
-    width: 10rem;
-    height: 30px;
-    text-align: center;
-} */
-
 #lastSection{ 
     position:relative; 
     padding:80px 0 0; 
-    background-color: deepskyblue;
+    background-color: black;
     list-style: none;
     width: 100%;
 }
@@ -124,17 +102,43 @@ img {
     height: 40px;
     margin-left: 1%;
     margin-bottom:7px;
-    background-color: gray;
+    background-color: #FCF6F5;
 }
 .links li a { display:block; }
 .links li a img { width:100%; }
 
 
     
-@media screen and (max-width: 768px) {
-    .navbar__menu {
+@media screen and (max-width: 960px) {
+    .navbar {
         flex-direction: column;
-        background-color: wheat;
+        align-items: flex-start;
+        padding: 8px 24px;
+    }
+
+    .navbar__logo {
+        width: auto; height: auto;
+        max-width: 180px;
+        max-height: 180px;
+    }
+
+    .navbar__menu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
+    }
+
+    .navbar__menu li {
+        width: 100%;
+        text-align: center;
+    }
+
+    .navbar__togglebutton {
+        display: block;
+    }
+
+    .navbar__menu.active {
+        display: flex;
     }
 }
