--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -2,6 +2,8 @@ body{
     text-align: center;
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 a, a:hover, a:link, a:visited {
@@ -19,7 +21,6 @@ a, a:hover, a:link, a:visited {
 .navbar__menu {
     display: flex;
     list-style: none;
-    padding-left: 0;
 }
 
 .navbar__menu li {
@@ -117,7 +118,8 @@ img {
     }
 
     .navbar__logo {
-        width: auto; height: auto;
+        width: auto; 
+        height: auto;
         max-width: 180px;
         max-height: 180px;
     }
@@ -132,6 +134,8 @@ img {
     .navbar__menu li {
         width: 100%;
         text-align: center;
+        padding: 10px 0px;
+        margin-right: 50px;
     }
 
     .navbar__togglebutton {
