--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -45,8 +45,16 @@ img {
 }
 
 #welcome {
-    padding-bottom: 10rem;
+    padding-bottom: 3rem;
     background-color: gray;
+}
+
+#welcome > :nth-child(2) {
+    font-size: 50px;
+    width: auto;
+    height: auto;
+    padding-top: 100px;
+    padding-bottom: 30px;
 }
 
 .video_content { 
@@ -54,23 +62,22 @@ img {
     overflow: hidden; 
     height: 0; 
     padding-bottom: 56.25%; 
-    padding-top: 30px; 
 } 
 
-.video_content iframe { 
+.video_content > iframe { 
     position: absolute; 
     top: 50%; 
     left: 50%; 
     width: 100%; 
     height: 100%;
-    max-width: 768px;
-    max-height: 432px;
+    max-width: 1120px;
+    max-height: 630px;
     transform: translate(-50%, -50%);
 }
 
 #lastSection{ 
     position:relative; 
-    padding:80px 0 0; 
+    padding:80px 0px 0px; 
     background-color: black;
     list-style: none;
     width: 100%;
@@ -104,8 +111,7 @@ img {
         flex-direction: column;
         align-items: flex-start;
         position: relative;
-        padding: 10px 0px;
-        padding-top: 0px;
+        padding: 0px;
     }
 
     .navbar__logo {
@@ -135,5 +141,12 @@ img {
 
     .navbar__menu.active {
         display: flex;
+    }
+
+    #welcome > :nth-child(2) {
+        font-size: 50px;
+        width: auto;
+        height: auto;
+        padding-bottom: 30px;
     }
 }
