--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -1,4 +1,5 @@
 body{
+    background-color: #7b9acc;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -46,7 +47,7 @@ img {
 
 #welcome {
     padding-bottom: 3rem;
-    background-color: gray;
+    /* background-color: gray; */
 }
 
 #welcome > :nth-child(2) {
@@ -78,7 +79,7 @@ img {
 #lastSection{ 
     position:relative; 
     padding:80px 0px 0px; 
-    background-color: black;
+    background-color: gray;
     list-style: none;
     width: 100%;
 }
