--- a/freshman/css/style.css
+++ b/freshman/css/style.css
@@ -1,13 +1,24 @@
-body{
+@font-face {
+    font-family: 'GmarketSansLight';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {
     background-color: #7b9acc;
     text-align: center;
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
+    font-family: 'GmarketSansLight';
 }
 
-a, a:hover, a:link, a:visited {
+a,
+a:hover,
+a:link,
+a:visited {
     text-decoration: none;
     color: #7b9acc
 }
@@ -50,7 +61,7 @@ img {
     /* background-color: gray; */
 }
 
-#welcome > :nth-child(2) {
+#welcome> :nth-child(2) {
     font-size: 50px;
     width: auto;
     height: auto;
@@ -58,55 +69,63 @@ img {
     padding-bottom: 30px;
 }
 
-.video_content { 
-    position: relative; 
-    overflow: hidden; 
-    height: 0; 
-    padding-bottom: 56.25%; 
-} 
+.video_content {
+    position: relative;
+    overflow: hidden;
+    height: 0;
+    padding-bottom: 56.25%;
+}
 
-.video_content > iframe { 
-    position: absolute; 
-    top: 50%; 
-    left: 50%; 
-    width: 100%; 
+.video_content>iframe {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
     height: 100%;
     max-width: 1120px;
     max-height: 630px;
     transform: translate(-50%, -50%);
 }
 
-#lastSection{ 
-    position:relative; 
-    padding:80px 0px 0px; 
+#lastSection {
+    position: relative;
+    padding: 80px 0px 0px;
     background-color: gray;
     list-style: none;
     width: 100%;
 }
 
-.links { 
-    padding:72px 0 92px; 
+.links {
+    padding: 72px 0 92px;
     padding-right: 15px;
 }
-.links:after { 
-    content:"";
-    display:block;
-    clear:both;
-    *zoom:1; 
+
+.links:after {
+    content: "";
+    display: block;
+    clear: both;
+    *zoom: 1;
 }
-.links li { 
-    float:left; 
-    width:19%;
+
+.links li {
+    float: left;
+    width: 19%;
     font-size: 1.5em;
     text-align: center;
     padding-top: 20px;
     height: 40px;
     margin-left: 1%;
-    margin-bottom:7px;
+    margin-bottom: 7px;
     background-color: #FCF6F5;
 }
-.links li a { display:block; }
-.links li a img { width:100%; }
+
+.links li a {
+    display: block;
+}
+
+.links li a img {
+    width: 100%;
+}
 
 .library {
     width: auto;
@@ -119,8 +138,8 @@ img {
         padding: 0.5rem 4rem;
     }
 
-    #lastSection{ 
-        padding: 30px 0px; 
+    #lastSection {
+        padding: 30px 0px;
         width: 100%;
     }
 }
@@ -163,16 +182,29 @@ img {
         display: flex;
     }
 
-    #welcome > :nth-child(2) {
+    #welcome> :nth-child(2) {
         font-size: 50px;
         width: auto;
         height: auto;
         padding-bottom: 30px;
     }
 
-    #lastSection{ 
+    #lastSection {
         padding: 10px 0px;
         padding-left: 5px;
         font-size: 0.5rem;
     }
+}
+
+
+#sec2,#sec3 {
+    padding-top: 100px;
+}
+
+.sec2{
+    padding-bottom: 60px;
+}
+
+.desc{
+    font-size: 50px;
 }
