--- a/freshman/css/style.css
+++ b/freshman/css/style.css
@@ -15,6 +15,17 @@ body {
     font-family: 'GmarketSansLight';
 }
 
+#welcome {
+    padding-bottom: 3rem;
+}
+
+#welcome> :nth-child(2) {
+    font-size: 50px;
+    width: auto;
+    height: auto;
+    margin: 5% 0;
+}
+
 a,
 a:hover,
 a:link,
@@ -32,6 +43,12 @@ a:visited {
 .navbar__menu {
     display: flex;
     list-style: none;
+    margin: 0;
+    margin-top: 30%;
+}
+
+.navbar__logo {
+    display: none;
 }
 
 .navbar__menu li {
@@ -39,6 +56,10 @@ a:visited {
     background-color: #FCF6F5;
     border: 1px solid white;
     font-size: 1.5rem;
+    line-height: 30px;
+    border-radius: 0.2rem;
+    margin: 0 1px;
+    text-align: center;
 }
 
 .navbar__togglebutton {
@@ -47,22 +68,6 @@ a:visited {
     top: 5px;
     font-size: 30px;
     display: none;
-}
-
-img {
-    height: 300;
-    width: 150;
-}
-
-#welcome {
-    padding-bottom: 3rem;
-}
-
-#welcome> :nth-child(2) {
-    font-size: 50px;
-    width: auto;
-    height: auto;
-    padding-bottom: 30px;
 }
 
 .video_content {
@@ -128,10 +133,10 @@ img {
     height: auto;
 }
 
-@media screen and (max-width: 1180px) {
-    .navbar__menu li {
-        font-size: 1rem;
-        padding: 0.5rem 4rem;
+@media screen and (max-width: 1543px) {
+    .navbar__menu li{
+        font-size: 1.2rem;
+        padding: 0.8rem 3.5rem;
     }
 
     #lastSection {
@@ -140,7 +145,14 @@ img {
     }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1310px) {
+    .navbar__menu li{
+        padding: 0.6rem 3rem;
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 1100px) {
     .navbar {
         flex-direction: column;
         align-items: flex-start;
@@ -160,6 +172,7 @@ img {
         flex-direction: column;
         align-items: center;
         width: 100%;
+        margin: 0;
     }
 
     .navbar__menu li {
@@ -167,7 +180,9 @@ img {
         text-align: center;
         padding: 10px 0px;
         margin-right: 50px;
-        font-size: 1.7rem;
+        line-height: 20px;
+        border-radius: 0;
+        margin: 0;
     }
 
     .navbar__togglebutton {
@@ -179,10 +194,7 @@ img {
     }
 
     #welcome> :nth-child(2) {
-        font-size: 50px;
-        width: auto;
-        height: auto;
-        padding-bottom: 30px;
+        font-size: 2rem;
     }
 
     #lastSection {
