--- a/freshman/css/style.css
+++ b/freshman/css/style.css
@@ -133,6 +133,17 @@ a:visited {
     height: auto;
 }
 
+#sec2,#sec3,#sec4 {
+    padding-top: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.down {
+    margin-top: 10px;
+}
+
+
 @media screen and (max-width: 1543px) {
     .navbar__menu li{
         font-size: 1.2rem;
@@ -140,12 +151,12 @@ a:visited {
     }
 
     .desc{
-        font-size: 5.5rem;
+        font-size:50px;
     }
 
     .sec2{
         padding-bottom: 60px;
-        font-size: 4rem;
+        font-size: 30px;
     }
 
     #lastSection {
@@ -161,12 +172,12 @@ a:visited {
     }
 
     .desc{
-        font-size: 4rem;
+        font-size: 40px;
     }
 
     .sec2{
         padding-bottom: 60px;
-        font-size: 2.5rem;
+        font-size: 20px;
     }
 
     
@@ -181,12 +192,12 @@ a:visited {
     }
 
     .desc{
-        font-size: 3rem;
+        font-size: 30px;
     }
 
     .sec2{
         padding-bottom: 60px;
-        font-size: 1.5rem;
+        font-size: 10px;
     }
 
 
@@ -238,23 +249,19 @@ a:visited {
     
 
     .desc{
-        font-size: 2.5rem;
+        font-size: 25px;
     }
 
     .sec2{
         padding-bottom: 60px;
-        font-size: 1rem;
+        font-size: 5px;
     }
 
     
 }
 
 
-#sec2,#sec3,#sec4 {
-    padding-top: 100px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+
 
 /* .sec2{
     padding-bottom: 60px;
@@ -263,9 +270,6 @@ a:visited {
 
 
 
-.down {
-    margin-top: 10px;
-}
 
 
 
